Code restructuring and revision

--- a/notebooks/evaluation/Evaluating models with Cranfield-style ranking protocols.ipynb
+++ b/notebooks/evaluation/Evaluating models with Cranfield-style ranking protocols.ipynb
@@ -5,7 +5,7 @@
    "id": "bd5c7c7c",
    "metadata": {},
    "source": [
-    "#### Imports"
+    "### Standard imports and global variables"
    ]
   },
   {
@@ -38,7 +38,7 @@
    "id": "22f468e2",
    "metadata": {},
    "source": [
-    "#### Functions"
+    "### Defining functions to extract run parameters"
    ]
   },
   {
@@ -150,7 +150,7 @@
    "id": "3c2cc4e2",
    "metadata": {},
    "source": [
-    "### Reading qrels and listing supported evaluation measures"
+    "### Reading in query relevances"
    ]
   },
   {
