--- a/notebooks/misc/Trying out Wikipedia API.ipynb
+++ b/notebooks/misc/Trying out Wikipedia API.ipynb
@@ -6,8 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import wikipedia\n",
-    "import re"
+    "import re\n",
+    "import wikipedia"
    ]
   },
   {
@@ -481,13 +481,6 @@
    "source": [
     "page.sections"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -509,7 +502,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
