Finished adding up all remaining code

--- a/notebooks/preparation/Getting a list of available stocks on Revolut.ipynb
+++ b/notebooks/preparation/Getting a list of available stocks on Revolut.ipynb
@@ -324,7 +324,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.7 ('tldr')",
    "language": "python",
    "name": "python3"
   },
@@ -339,6 +339,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.7"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "6853f8d60e709343e37ae0ef9edab9d01a35343cdb061b06ff5cbce9cadce0e4"
+   }
   }
  },
  "nbformat": 4,
