--- a/notebooks/processing/Prepare stock data for user study.ipynb
+++ b/notebooks/processing/Prepare stock data for user study.ipynb
@@ -467,7 +467,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Top tickers that are not in any article {'PFE', 'FCX', 'XOM', 'T', 'X', 'BBD', 'CVX'}\n"
+      "Top tickers that are not in any article {'X', 'XOM', 'BBD', 'PFE', 'FCX', 'T', 'CVX'}\n"
      ]
     }
    ],
@@ -698,7 +698,7 @@
     {
      "data": {
       "text/plain": [
-       "dict_keys(['LI', 'PTRA', 'NRG', 'F', 'HES', 'EQNR', 'RIO', 'TECK', 'XPEV', 'NIO', 'TSLA', 'NDAQ', 'BABA', 'XLNX', 'HIMX', 'DIDI', 'BNTX', 'MRNA', 'ABEV', 'NCLH', 'CCL', 'AMC', 'EDU', 'TME', 'WDC', 'PLUG', 'AMD', 'YY', 'TSM', 'NVDA', 'INTC', 'AAPL', 'PBR', 'SCCO', 'VALE', 'SID', 'SOFI', 'BSBR', 'C', 'ITUB', 'EVR', 'ET', 'KSS', 'M', 'JD', 'VIPS', 'IQ', 'UBER', 'AAL', 'T', 'BBD', 'CVX', 'XOM', 'FCX', 'PFE', 'X', 'ROKU', 'VFC', 'KDP', 'ATVI', 'SPCE', 'NOV', 'KHC', 'ESI'])"
+       "dict_keys(['LI', 'PTRA', 'NRG', 'F', 'HES', 'EQNR', 'RIO', 'TECK', 'XPEV', 'NIO', 'TSLA', 'NDAQ', 'BABA', 'XLNX', 'HIMX', 'DIDI', 'BNTX', 'MRNA', 'ABEV', 'NCLH', 'CCL', 'AMC', 'EDU', 'TME', 'WDC', 'PLUG', 'AMD', 'YY', 'TSM', 'NVDA', 'INTC', 'AAPL', 'PBR', 'SCCO', 'VALE', 'SID', 'SOFI', 'BSBR', 'C', 'ITUB', 'EVR', 'ET', 'KSS', 'M', 'JD', 'VIPS', 'IQ', 'UBER', 'AAL', 'T', 'BBD', 'CVX', 'XOM', 'FCX', 'PFE', 'X', 'NOV', 'ROKU', 'KDP', 'KHC', 'VFC', 'SPCE', 'ESI', 'ATVI'])"
       ]
      },
      "execution_count": 17,
@@ -762,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
    "id": "b238e7cb",
    "metadata": {},
    "outputs": [
@@ -808,20 +808,20 @@
        " ('Utilities', 'Gas Distributors')}"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "sectors_industries = stocks_df.groupby([\"sector\", \"industry\"])\n",
-    "remaining_serctors_indsturies = set(sectors_industries.groups.keys()) - set(set_aside_sectors_industries)\n",
-    "remaining_serctors_indsturies"
+    "remaining_sectors_industuries = set(sectors_industries.groups.keys()) - set(set_aside_sectors_industries)\n",
+    "remaining_sectors_industuries"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "id": "9b20bf26",
    "metadata": {
     "scrolled": true
@@ -3920,7 +3920,7 @@
     "unrepresented_sectors_industries = []\n",
     "\n",
     "for key, group in sectors_industries:\n",
-    "    if key in remaining_serctors_indsturies:\n",
+    "    if key in remaining_sectors_industuries:\n",
     "        group = group.sort_values(\"article_count\", ascending=False)\n",
     "        print(key)\n",
     "        display(group)\n",
@@ -3933,7 +3933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 27,
    "id": "43dab3a1",
    "metadata": {},
    "outputs": [
@@ -3947,10 +3947,10 @@
     {
      "data": {
       "text/plain": [
-       "dict_keys(['LI', 'PTRA', 'NRG', 'F', 'HES', 'EQNR', 'RIO', 'TECK', 'XPEV', 'NIO', 'TSLA', 'NDAQ', 'BABA', 'XLNX', 'HIMX', 'DIDI', 'BNTX', 'MRNA', 'ABEV', 'NCLH', 'CCL', 'AMC', 'EDU', 'TME', 'WDC', 'PLUG', 'AMD', 'YY', 'TSM', 'NVDA', 'INTC', 'AAPL', 'PBR', 'SCCO', 'VALE', 'SID', 'SOFI', 'BSBR', 'C', 'ITUB', 'EVR', 'ET', 'KSS', 'M', 'JD', 'VIPS', 'IQ', 'UBER', 'AAL', 'T', 'BBD', 'CVX', 'XOM', 'FCX', 'PFE', 'X', 'ROKU', 'VFC', 'KDP', 'ATVI', 'SPCE', 'NOV', 'KHC', 'ESI', 'CHL', 'COTY', 'FCEL', 'MPC', 'KKR', 'INO', 'IAG', 'RL', 'SSNC', 'BIP', 'SRE'])"
+       "dict_keys(['LI', 'PTRA', 'NRG', 'F', 'HES', 'EQNR', 'RIO', 'TECK', 'XPEV', 'NIO', 'TSLA', 'NDAQ', 'BABA', 'XLNX', 'HIMX', 'DIDI', 'BNTX', 'MRNA', 'ABEV', 'NCLH', 'CCL', 'AMC', 'EDU', 'TME', 'WDC', 'PLUG', 'AMD', 'YY', 'TSM', 'NVDA', 'INTC', 'AAPL', 'PBR', 'SCCO', 'VALE', 'SID', 'SOFI', 'BSBR', 'C', 'ITUB', 'EVR', 'ET', 'KSS', 'M', 'JD', 'VIPS', 'IQ', 'UBER', 'AAL', 'T', 'BBD', 'CVX', 'XOM', 'FCX', 'PFE', 'X', 'NOV', 'ROKU', 'KDP', 'KHC', 'VFC', 'SPCE', 'ESI', 'ATVI', 'CHL', 'COTY', 'FCEL', 'MPC', 'KKR', 'INO', 'IAG', 'RL', 'SSNC', 'BIP', 'SRE'])"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3962,9 +3962,69 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 29,
+   "id": "8233635b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{('Communications', 'Major Telecommunications'),\n",
+       " ('Consumer Durables', 'Electronics/Appliances'),\n",
+       " ('Consumer Durables', 'Motor Vehicles'),\n",
+       " ('Consumer Durables', 'Recreational Products'),\n",
+       " ('Consumer Non-Durables', 'Apparel/Footwear'),\n",
+       " ('Consumer Non-Durables', 'Beverages: Alcoholic'),\n",
+       " ('Consumer Non-Durables', 'Beverages: Non-Alcoholic'),\n",
+       " ('Consumer Non-Durables', 'Food: Major Diversified'),\n",
+       " ('Consumer Services', 'Hotels/Resorts/Cruise lines'),\n",
+       " ('Consumer Services', 'Movies/Entertainment'),\n",
+       " ('Consumer Services', 'Other Consumer Services'),\n",
+       " ('Electronic Technology', 'Aerospace & Defense'),\n",
+       " ('Electronic Technology', 'Computer Peripherals'),\n",
+       " ('Electronic Technology', 'Electronic Components'),\n",
+       " ('Electronic Technology', 'Semiconductors'),\n",
+       " ('Electronic Technology', 'Telecommunications Equipment'),\n",
+       " ('Energy Minerals', 'Integrated Oil'),\n",
+       " ('Energy Minerals', 'Oil & Gas Production'),\n",
+       " ('Finance', 'Finance/Rental/Leasing'),\n",
+       " ('Finance', 'Financial Conglomerates'),\n",
+       " ('Finance', 'Investment Banks/Brokers'),\n",
+       " ('Finance', 'Major Banks'),\n",
+       " ('Finance', 'Regional Banks'),\n",
+       " ('Health Technology', 'Biotechnology'),\n",
+       " ('Health Technology', 'Pharmaceuticals: Major'),\n",
+       " ('Industrial Services', 'Oil & Gas Pipelines'),\n",
+       " ('Industrial Services', 'Oilfield Services/Equipment'),\n",
+       " ('Non-Energy Minerals', 'Other Metals/Minerals'),\n",
+       " ('Non-Energy Minerals', 'Steel'),\n",
+       " ('Process Industries', 'Chemicals: Major Diversified'),\n",
+       " ('Producer Manufacturing', 'Auto Parts: OEM'),\n",
+       " ('Retail Trade', 'Department Stores'),\n",
+       " ('Retail Trade', 'Internet Retail'),\n",
+       " ('Technology Services', 'Internet Software/Services'),\n",
+       " ('Technology Services', 'Packaged Software'),\n",
+       " ('Transportation', 'Airlines'),\n",
+       " ('Utilities', 'Electric Utilities')}"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "represented_sectors_industries = set(sectors_industries.groups.keys()) - set(unrepresented_sectors_industries)\n",
+    "represented_sectors_industries"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 23,
    "id": "b1c0320b",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -4123,14 +4183,6 @@
    "source": [
     "len(set_aside_stocks)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "859589bb",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
