--- a/notebooks/processing/Extracting links as high-level keywords from wiki pages (Updated).ipynb
+++ b/notebooks/processing/Extracting links as high-level keywords from wiki pages (Updated).ipynb
@@ -25313,9 +25313,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.6 64-bit ('tldr': conda)",
+   "display_name": "Python 3.9.7 ('tldr')",
    "language": "python",
-   "name": "python396jvsc74a57bd0e4c6f9ab0afc44c5c63e1b233fc90c970e43406a17ee57d06d7c91febfb3a0f7"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -25328,6 +25328,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.7"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "6853f8d60e709343e37ae0ef9edab9d01a35343cdb061b06ff5cbce9cadce0e4"
+   }
   }
  },
  "nbformat": 4,
